{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 726,
  "lineage": "7d3f831d-1945-30b0-4346-db6b4449a141",
  "resources": [
    {
      "mode": "data",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "Default network for the project",
            "id": "projects/testing-project-371619/global/networks/default",
            "name": "default",
            "self_link": "https://www.googleapis.com/compute/v1/projects/testing-project-371619/global/networks/default",
            "subnetworks_self_links": [
              "https://www.googleapis.com/compute/v1/projects/testing-project-371619/regions/us-east4/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/testing-project-371619/regions/europe-west12/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/testing-project-371619/regions/us-south1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/testing-project-371619/regions/us-east5/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/testing-project-371619/regions/asia-northeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/testing-project-371619/regions/europe-west9/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/testing-project-371619/regions/asia-east1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/testing-project-371619/regions/europe-west8/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/testing-project-371619/regions/asia-southeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/testing-project-371619/regions/us-west3/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/testing-project-371619/regions/australia-southeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/testing-project-371619/regions/europe-west6/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/testing-project-371619/regions/europe-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/testing-project-371619/regions/asia-east2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/testing-project-371619/regions/us-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/testing-project-371619/regions/us-east1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/testing-project-371619/regions/australia-southeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/testing-project-371619/regions/asia-northeast3/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/testing-project-371619/regions/asia-southeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/testing-project-371619/regions/asia-south1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/testing-project-371619/regions/us-west2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/testing-project-371619/regions/us-central1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/testing-project-371619/regions/asia-northeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/testing-project-371619/regions/europe-west3/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/testing-project-371619/regions/northamerica-northeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/testing-project-371619/regions/us-west4/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/testing-project-371619/regions/northamerica-northeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/testing-project-371619/regions/europe-southwest1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/testing-project-371619/regions/europe-north1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/testing-project-371619/regions/me-central1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/testing-project-371619/regions/asia-south2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/testing-project-371619/regions/southamerica-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/testing-project-371619/regions/me-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/testing-project-371619/regions/europe-central2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/testing-project-371619/regions/europe-west4/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/testing-project-371619/regions/southamerica-east1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/testing-project-371619/regions/europe-west2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/testing-project-371619/regions/us-east7/subnetworks/default"
            ]
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.128.0.1",
            "id": "projects/testing-project-371619/regions/us-central1/subnetworks/default",
            "ip_cidr_range": "10.128.0.0/20",
            "name": "default",
            "network": "https://www.googleapis.com/compute/v1/projects/testing-project-371619/global/networks/default",
            "private_ip_google_access": false,
            "project": "testing-project-371619",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/testing-project-371619/regions/us-central1/subnetworks/default"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/testing-project-371619/zones/us-central1-a/instanceGroups/testing-animo-backend-group-66ff851",
                "max_rate_per_instance": 500,
                "max_utilization": 0.8
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-05-17T10:40:54.881-07:00",
            "enable_cdn": false,
            "fingerprint": "M2TOYF5tL5o=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/testing-project-371619/global/healthChecks/testing-animo-backend-group-health-check"
            ],
            "id": "projects/testing-project-371619/global/backendServices/testing-animo-backend-load-balancer-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "testing-animo-backend-load-balancer-backend-service",
            "port_name": "https",
            "project": "testing-project-371619",
            "protocol": "HTTPS",
            "self_link": "https://www.googleapis.com/compute/v1/projects/testing-project-371619/global/backendServices/testing-animo-backend-load-balancer-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "data.local_file.stdout",
            "google_compute_health_check.https_health_check",
            "google_compute_instance_group_manager.this",
            "google_compute_instance_template.this",
            "null_resource.std"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-05-17T10:40:21.887-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/testing-project-371619/global/firewalls/testing-animo-backend-load-balancer-allow-healthcheck",
            "log_config": [],
            "name": "testing-animo-backend-load-balancer-allow-healthcheck",
            "network": "https://www.googleapis.com/compute/v1/projects/testing-project-371619/global/networks/default",
            "priority": 1000,
            "project": "testing-project-371619",
            "self_link": "https://www.googleapis.com/compute/v1/projects/testing-project-371619/global/firewalls/testing-animo-backend-load-balancer-allow-healthcheck",
            "source_ranges": [
              "0.0.0.0/0",
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "backend",
              "http-server",
              "https-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/testing-project-371619/global/forwardingRules/testing-animo-backend-load-balancer-frontend-service",
            "ip_address": "35.201.89.236",
            "ip_protocol": "TCP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "testing-animo-backend-load-balancer-frontend-service",
            "port_range": "443-443",
            "project": "testing-project-371619",
            "self_link": "https://www.googleapis.com/compute/v1/projects/testing-project-371619/global/forwardingRules/testing-animo-backend-load-balancer-frontend-service",
            "target": "https://www.googleapis.com/compute/v1/projects/testing-project-371619/global/targetHttpsProxies/testing-animo-backend-load-balancer-https-proxy"
          },
          "dependencies": [
            "data.local_file.stdout",
            "google_compute_backend_service.this",
            "google_compute_health_check.https_health_check",
            "google_compute_instance_group_manager.this",
            "google_compute_instance_template.this",
            "google_compute_target_https_proxy.https",
            "google_compute_url_map.https",
            "null_resource.std"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-05-17T10:41:27.353-07:00",
            "id": "projects/testing-project-371619/global/targetHttpsProxies/testing-animo-backend-load-balancer-https-proxy",
            "name": "testing-animo-backend-load-balancer-https-proxy",
            "project": "testing-project-371619",
            "proxy_bind": false,
            "proxy_id": 369289224048389928,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/testing-project-371619/global/targetHttpsProxies/testing-animo-backend-load-balancer-https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/testing-project-371619/global/sslCertificates/testing-animo-backend-cert"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/testing-project-371619/global/urlMaps/testing-animo-backend-load-balancer"
          },
          "dependencies": [
            "data.local_file.stdout",
            "google_compute_backend_service.this",
            "google_compute_health_check.https_health_check",
            "google_compute_instance_group_manager.this",
            "google_compute_instance_template.this",
            "google_compute_url_map.https",
            "null_resource.std"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-05-17T10:41:16.204-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/testing-project-371619/global/backendServices/testing-animo-backend-load-balancer-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "x9JAXxofd6k=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/testing-project-371619/global/urlMaps/testing-animo-backend-load-balancer",
            "map_id": 1953286614650761043,
            "name": "testing-animo-backend-load-balancer",
            "path_matcher": [],
            "project": "testing-project-371619",
            "self_link": "https://www.googleapis.com/compute/v1/projects/testing-project-371619/global/urlMaps/testing-animo-backend-load-balancer",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.local_file.stdout",
            "google_compute_backend_service.this",
            "google_compute_health_check.https_health_check",
            "google_compute_instance_group_manager.this",
            "google_compute_instance_template.this",
            "null_resource.std"
          ]
        }
      ]
    }
  ]
}